GNOME Bugzilla – Bug 761064
Devhelp plugin crashes (SIGSEGV) builder when disabling it
Last modified: 2016-01-25 00:24:15 UTC
Whenever I try to unload the devhelp extension I get builder crashing pretty badly with a segmentation fault with a partial backtrace like this:
+ Trace 235928
(see full backtrace attached) The problem seems to be that gtk_application_set_accels_for_action() is being called with NULL as the last parameter instead of a NULL-terminated empty array, which is causing GtkApplication to have a hard time internally.
Created attachment 319635 [details] Full backtrace
Created attachment 319636 [details] [review] Patch proposal Indeed, this fixes the crashes reliably for me (which makes sense after checking the code in gtkapplication.c), so I'm proposing the mentioned approach as a patch, not only for the devhelp extension, but also for the terminal one, which presents the same issue. Please review, thanks!
Review of attachment 319636 [details] [review]: LGTM
Thanks!