plugins: Properly remove all the accelerators when unloading extensions

Pass a NULL-terminated array to gtk_application_set_accels_for_action
instead of simply passing NULL to avoid acrash in GtkApplication when
unloading the devhelp and/or the terminal extensions.

https://bugzilla.gnome.org/show_bug.cgi?id=761064